--- a/pages/about.html
+++ b/pages/about.html
@@ -10,9 +10,9 @@ titlename: 关于
 <p style=font-size:18px>一个对生活充满激情，并希望有所成就的年轻人！</p>
 
 <h3>关于模板</h3>
-<p style=font-size:18px>模板来源于<a href="{{ https://github.com/lay1010/lay1010.github.io }}">PainterLin.com</a></p>
+<p style=font-size:18px>模板来源于<a href="https://github.com/lay1010/lay1010.github.io">PainterLin.com</a></p>
 
-<center><img src="/public/img/dog.jpg" style="width:100%"></center>
+<center><img src="/public/img/love.jpg" style="width:100%"></center>
 
 <hr>
 <a href="{{ site.author.linkedin }}">
