添加评论插件
Signed-off-by: duyanghao <1294057873@qq.com>

--- a/index.html
+++ b/index.html
@@ -54,3 +54,5 @@ layout: page
   {% endif %}
   (共{{ paginator.total_posts }}篇)
 </div>
+
+<a href="https://duyanghao.github.io{{ post.url }}#disqus_thread">0 Comments</a>
